--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
-
+{% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -12,15 +12,9 @@
     <title>My</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="../static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{% static 'css/bootstrap.min.css' %}"  rel="stylesheet">
 
-    <!-- Custom styles for this template -->
-    <link href="jumbotron-narrow.css" rel="stylesheet">
-
-    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
-
+    
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -34,9 +28,9 @@
       <div class="header clearfix">
         <nav>
           <ul class="nav nav-pills pull-right">
-            <li role="presentation" class="active"><a href="index.html">Main</a></li>
-            <li role="presentation"><a href="contact.html">Contacts</a></li>
-	<li role="presentation" ><a href="student_list.html">Students</a></li>
+            <li role="presentation" class="active"><a href="/">Main</a></li>
+            <li role="presentation"><a href="{% url 'contact' %}">Contacts</a></li>
+	<li role="presentation" ><a href="{% url 'student_list' %}">Students</a></li>
           </ul>
         </nav>
         
@@ -46,7 +40,7 @@
 <h1>HogwBursa</h1>        
 <h2>Description</h2>
         <p class="lead">Язык программирования Python (волш. Василиск) — это мощный инструмент для создания программ самого разнообразного назначения, доступный даже для маглов.  </p>
-        <p><a class="btn btn-lg btn-success" href="index.html" role="button">Послать почтовую сову с заявкой прямо сейчас</a></p>
+        <p><a class="btn btn-lg btn-success" href="/" role="button">Послать почтовую сову с заявкой прямо сейчас</a></p>
       </div>
 
       <div class="row marketing">
