--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -1,4 +1,4 @@
-
+{% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -12,20 +12,8 @@
     <title>Students</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="../static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
 
-    <!-- Custom styles for this template 
-    <link href="jumbotron-narrow.css" rel="stylesheet">-->
-
-    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
   </head>
 
   <body>
@@ -34,9 +22,9 @@
       <div class="header clearfix">
         <nav>
           <ul class="nav nav-pills pull-right">
-            <li role="presentation" ><a href="index.html">Main</a></li>
-            <li role="presentation"><a href="contact.html">Contacts</a></li>
-						<li role="presentation" class="active"><a href="student_list.html">Students</a></li>
+            <li role="presentation" ><a href="/">Main</a></li>
+            <li role="presentation"><a href="{% url 'contact' %}">Contacts</a></li>
+						<li role="presentation" class="active"><a href="{% url 'student_list' %}">Students</a></li>
           </ul>
         </nav>
         
@@ -58,7 +46,7 @@
     <tr>
     <th>No</th><th>Surname</th><th>Name</th><th>Address</th><th>Skype</th>
    </tr>
-    <td><a href="student_detail.html">1</a></td><td>Щуцкая</td><td>Елена</td><td>Украина, Запорожье, Кремлевская, 109</td><td>e_realWizard</td></tr>
+    <td><a href="{% url 'student_detail' %}">1</a></td><td>Щуцкая</td><td>Елена</td><td>Украина, Запорожье, Кремлевская, 109</td><td>e_realWizard</td></tr>
    <tr>
     <td>2</td><td>Пузина</td><td>Екатерина</td><td>Украина, Запорожье, Ленина, 98/8</td><td>e.puzina</td>
    </tr>
@@ -79,8 +67,7 @@
     </div> <!-- /container -->
 
 
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+  
   </body>
 </html>
 ﻿
