--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -1,3 +1,5 @@
+{% load staticfiles %}
+
 <!DOCTYPE html>
 <!-- saved from url=(0054)http://getbootstrap.com/examples/sticky-footer-navbar/ -->
 <html lang="en">
@@ -10,16 +12,16 @@
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
   <meta name="description" content="">
   <meta name="author" content="">
-  <link rel="icon" href="../static/images/Other-python.ico">
+  <link rel="icon" href="{% static 'images/Other-python.ico">
   <title>PyBursa: Main page</title>
   <!-- Bootstrap core CSS -->
-  <link href="../static/css/bootstrap.css" rel="stylesheet">
+  <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
   <!-- Custom styles for this template -->
-  <link href="../static/css/sticky-footer-navbar.css" rel="stylesheet">
-  <link href="../static/css/style.css" rel="stylesheet">
+  <link href="{% static 'css/sticky-footer-navbar.css' %}" rel="stylesheet">
+  <link href="{% static 'css/style.css' %}" rel="stylesheet">
   <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-  <!--[if lt IE 9]><script src="../static/js/ie8-responsive-file-warning.js"></script><![endif]-->
-  <script src="../static/js/ie-emulation-modes-warning.js"></script>
+  <!--[if lt IE 9]><script src="{% static 'js/ie8-responsive-file-warning.js' %}"></script><![endif]-->
+  <script src="{% static 'js/ie-emulation-modes-warning.js' %}"></script>
   <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
   <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -38,13 +40,13 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="index.html"><img class="logo" alt="PyBursa" src="../static/images/Other-python.ico"></a>
+        <a class="navbar-brand" href="{% url 'index' %}"><img class="logo" alt="PyBursa" src="{% static 'images/Other-python.ico' %}"></a>
       </div>
       <div id="navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
-          <li><a href="index.html">Main</a></li>
-          <li><a href="contact.html">Contacts</a></li>
-          <li class="active"><a href="student_list.html">Students</a></li>
+          <li><a href="{% url 'index' %}">Main</a></li>
+          <li><a href="{% url 'contact' %}">Contacts</a></li>
+          <li class="active"><a href="{% url 'student_list' %}">Students</a></li>
         </ul>
       </div>
       <!--/.nav-collapse -->
@@ -68,7 +70,7 @@
         </thead>
         <tbody>
           <tr class="active row-link">
-            <td><a href="student_detail.html">1</a></td>
+            <td><a href="{% url 'student_detail' %}">1</a></td>
             <td>Lykhomanov</td>
             <td>Ihor</td>
             <td>Украина, г.Харьков, ул. Кирова, д. 6, кв. 10</td>
@@ -143,10 +145,10 @@
   <!-- Bootstrap core JavaScript
       ================================================== -->
   <!-- Placed at the end of the document so the pages load faster -->
-  <script src="../static/js/jquery.min.js"></script>
-  <script src="../static/js/bootstrap.js"></script>
+  <script src="{% static 'js/jquery.min.js' %}"></script>
+  <script src="{% static 'js/bootstrap.js' %}"></script>
   <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-  <script src="../static/js/ie10-viewport-bug-workaround.js"></script>
+  <script src="{% static 'js/ie10-viewport-bug-workaround.js' %}"></script>
   <script>
     $('#row1').on('click', function() {
       window.location = "student_detail.html";
@@ -155,5 +157,3 @@
 </body>
 
 </html>
-
-<!-- lold -->
