--- a/templates/contact.html
+++ b/templates/contact.html
@@ -23,21 +23,21 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           </button>
-        <a class="navbar-brand" href="index.html">JSBursa</a>
+        <a class="navbar-brand" href="{% url 'index' %}">JSBursa</a>
         </div>
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
             <li>
-              <a href="index.html">Main</a>
+              <a href="{% url 'index' %}">Main</a>
             </li>
 
             <li class="active">
-              <a href="contact.html">Contacts</a>
+              <a href="{% url 'contact' %}">Contacts</a>
             </li>
 
             <li>
-              <a href="student_list.html">Students</a>
+              <a href="{% url 'student_list' %}">Students</a>
             </li>
 
           </ul>
