--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -22,21 +22,21 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           </button>
-        <a class="navbar-brand" href="index.html">JSBursa</a>
+        <a class="navbar-brand" href="{% url 'index' %}">JSBursa</a>
         </div>
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
             <li>
-              <a href="index.html">Main</a>
+              <a href="{% url 'index' %}">Main</a>
             </li>
 
             <li>
-              <a href="contact.html">Contacts</a>
+              <a href="{% url 'contact' %}">Contacts</a>
             </li>
 
             <li class="active">
-              <a href="student_list.html">Students</a>
+              <a href="{% url 'student_list' %}">Students</a>
             </li>
 
           </ul>
@@ -63,7 +63,7 @@
 
 
           <tr>
-            <th scope="row"><a href="student_detail.html">1</a></th>
+            <th scope="row"><a href="{% url 'student_detail' %}">1</a></th>
             <td>Umanetc</td>
             <td>Yurij</td>
             <td>Харьков, ул. Сумская, 56, кв. 15</td>
