--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+  	{% load staticfiles %}
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Contacts</title>
-    <link rel="stylesheet" href="../static/css/style.css">
     <style>
 		body{background-image: url('../static/images/pic4.jpg') !important;
 		background-repeat: none; 
@@ -16,7 +16,9 @@
 	</style>
 
     <!-- Bootstrap -->
-    <link href="../static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
+    <link href="{% static 'css/style.css' %}" rel="stylesheet">
+    <link href="{% static 'css/jumbotron.css' %}" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -36,15 +38,15 @@
 	        <span class="icon-bar"></span>
 	        <span class="icon-bar"></span>
 	      </button>
-	      <a class="navbar-brand" href="index.html">ITBursa-2015</a>
+	      <a class="navbar-brand" href="{% url 'index' %}">ITBursa-2015</a>
 	    </div>
 	    
 	    <!-- Collect the nav links, forms, and other content for toggling -->
 	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 	      <ul class="nav navbar-nav">
-	        <li><a href="index.html">Main</a></li>
-	        <li class="active"><a href="contact.html">Contacts<span class="sr-only">(current)</span></a></li>
-	        <li><a href="student_list.html">Students<span class="sr-only">(current)</span></a></li>
+	        <li><a href="{% url 'index' %}">Main</a></li>
+	        <li class="active"><a href="{% url 'contact' %}">Contacts<span class="sr-only">(current)</span></a></li>
+	        <li><a href="{% url 'student_list' %}">Students<span class="sr-only">(current)</span></a></li>
 	        </li>
 	      </ul>
 	    </div><!-- /.navbar-collapse -->
@@ -53,13 +55,13 @@
 	<div class="row">
 	  <div class="col-sm-6 col-md-4">
 	    <div class="thumbnail">
-	      <img src="../static/images/pic6.jpg" width="100px" height="100px" class="img-circle">
+	      <img src="{% static 'images/pic6.jpg' %}" width="100px" height="100px" class="img-circle">
 	      <div class="caption">
 	        <h3>Director</h3>
 	        <p>Name: Daria Bondarenko</p>
 	        <p>Skype: daria</p> 
 	        <p>Phone: (123) 456-7890</p>
-	        <p><a href="#" class="btn btn-primary" role="button">Contact</a> 
+	        <p><a href="{% static 'images/pic6.jpg' %}" class="btn btn-primary" role="button">Contact</a> 
 	      </div>
 	    </div>
 	  </div>
@@ -67,14 +69,14 @@
 	<div class="row">
 	  <div class="col-sm-6 col-md-4">
 	    <div class="thumbnail">
-	      <img src="../static/images/pic1.jpg" width="100px" height="100px" class="img-circle">
+	      <img src="{% static 'images/pic1.jpg' %}" width="100px" height="100px" class="img-circle">
 	      <div class="caption">
 	        <h3> Manager</h3>
 	        <p>Name: Alex Ivanov</p>
 	        <p>Skype: Alex12</p> 
 	        <p>Phone: (123) 456-7891</p>
 	        <a href="mailto:#">AlexIvanov@gmail.com</a>
-	        <p><a href="#" class="btn btn-primary" role="button">Contact</a> 
+	        <p><a href="{% static 'images/pic1.jpg' %}" class="btn btn-primary" role="button">Contact</a> 
 	      </div>
 	    </div>
 	  </div>
@@ -82,14 +84,14 @@
 	<div class="row">
 	  <div class="col-sm-6 col-md-4">
 	    <div class="thumbnail">
-	      <img src="../static/images/pic5.jpg" width="100px" height="100px" class="img-circle">
+	      <img src="{% static 'images/pic5.jpg' %}" width="100px" height="100px" class="img-circle">
 	      <div class="caption">
 	        <h3>Founder</h3>
 	        <p>Name: Ivan Petrov</p>
 	        <p>Skype: ivan123</p> 
 	        <p>Phone: (123) 456-7892</p>
 	        <a href="mailto:#">123@gmail.com</a>
-	        <p><a href="#" class="btn btn-primary" role="button">Contact</a> 
+	        <p><a href="{% static 'images/pic5.jpg' %}" class="btn btn-primary" role="button">Contact</a> 
 	      </div>
 	    </div>
 	  </div>
@@ -97,6 +99,6 @@
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="../static/js/bootstrap.min.js"></script>
+    <script src="{% static "js/bootstrap.js" %}"></script>
   </body>
 </html>	
