--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+  	{% load staticfiles %}
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Student_list</title>
-    <link rel="stylesheet" href="../static/css/style.css">
     <style type="text/css">
 	   TABLE { 
 	    width: 300px; /* Ширина таблицы */
@@ -35,7 +35,9 @@
 		background-position: center top}
 	</style>
     <!-- Bootstrap -->
-    <link href="../static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
+    <link href="{% static 'css/style.css' %}" rel="stylesheet">
+    <link href="{% static 'css/jumbotron.css' %}" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -55,21 +57,21 @@
 	        <span class="icon-bar"></span>
 	        <span class="icon-bar"></span>
 	      </button>
-	      <a class="navbar-brand" href="index.html">ITBursa-2015</a>
+	      <a class="navbar-brand" href="{% url 'index' %}">ITBursa-2015</a>
 	    </div>
 	    
 	    <!-- Collect the nav links, forms, and other content for toggling -->
 	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 	      <ul class="nav navbar-nav">
-	        <li><a href="index.html">Main</a></li>
-	        <li><a href="contact.html">Contacts<span class="sr-only">(current)</span></a></li>
-	        <li><a href="student_list.html">Students<span class="sr-only">(current)</span></a></li>
+	        <li><a href="{% url 'index' %}">Main</a></li>
+	        <li><a href="{% url 'contact' %}">Contacts<span class="sr-only">(current)</span></a></li>
+	        <li><a href="{% url 'student_list' %}">Students<span class="sr-only">(current)</span></a></li>
 	        </li>
 	      </ul>
 	    </div><!-- /.navbar-collapse -->
 	  </div><!-- /.container-fluid -->
 	</nav>
-	<img src="../static/images/pic3.jpg" width="200px" height="200px" class="img-circle">		
+	<img src="{% static 'images/pic3.jpg' %}" width="200px" height="200px" class="img-circle">		
 	<div class="jumbotron">
 	  <h1>Ivanova Anna</h1>
 	  <p>Student's card ITBursa</p>
@@ -98,10 +100,10 @@
 	    <tr><td></td><td>Wee2</td><td>Tests</td><td>100%</td></tr>
 	  </table>
 	</div>
-	<img src="../static/images/img1.gif" width="100px" height="100px">	
+	<img src="{% static 'images/img1.gif' %}" width="100px" height="100px">	
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="../static/js/bootstrap.min.js"></script>
+    <script src="{% static "js/bootstrap.js" %}"></script>
   </body>
 </html>	
