--- a/templates/contact.html
+++ b/templates/contact.html
@@ -20,7 +20,6 @@
   <body>
     <div class="navbar-wrapper">
       <div class="container">
-
         <nav class="navbar navbar-inverse navbar-static-top">
           <div class="container">
             <div id="navbar" class="navbar-collapse collapse">
@@ -28,8 +27,7 @@
                 <li><a href="{% url 'index' %}">Main</a></li>
                 <li class="active"><a href="{% url 'contact' %}">Contacts</a></li>
                 <li><a href="{% url 'student_list' %}">Students</a><li>
-                  </ul>
-                </li>
+                <li><a href="{% url 'results' %}">Results</a><li>
               </ul>
             </div>
           </div>
