--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -24,8 +24,7 @@
                 <li><a href="{% url 'index' %}">Main</a><li>
                 <li><a href="{% url 'contact' %}">Contacts</a><li>
                 <li class="active"><a href="{% url 'student_list' %}">Students</a><li>
-                  </ul>
-                </li>
+                <li><a href="{% url 'results' %}">Results</a><li>
               </ul>
             </div>
           </div>
