--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -32,6 +32,7 @@
       <a class="navbar-brand" href="{% url 'index' %}">Main</a>
       <a class="navbar-brand" href="{% url 'contact' %}">Contacts</a>
       <a class="navbar-brand" href="{% url 'student_list' %}">Students</a>
+      <a class="navbar-brand" href="{% url 'results' %}">Eq_result</a>
     	</div>
     	<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
     	</div><!-- /.navbar-collapse -->
