--- a/quadratic/templates/results.html
+++ b/quadratic/templates/results.html
@@ -5,31 +5,52 @@
     <title>{{ title }}</title>
 </head>
 <body>
-{% if e %}
-    <h1>{{ e }}</h1>
-{% else %}
+
+
 <h1>Квадратное уравнение a*x*x + b*x + c = 0</h1>
-{% endif %}
-    <ul>
-        <li> a = {{ a }}</li>
 
-        <li> b = {{ b }}</li>
+        <ul>
+            <li>
+                a = {{ a }}
+                {% if error_a %}
+                    <ul>
+                        <li>
+                            {{ error_a }}
+                        </li>
+                    </ul>
+                {% endif %}
+            </li>
+            <li>
+                b = {{ b }}
+                 {% if error_b %}
+                    <ul>
+                        <li>
+                            {{ error_b }}
+                        </li>
+                    </ul>
+                {% endif %}
+            </li>
+            <li>
+                c = {{ c }}
+                 {% if error_c %}
+                    <ul>
+                        <li>
+                            {{ error_c }}
+                        </li>
+                    </ul>
+                {% endif %}
+            </li>
+        </ul>
 
-        <li> c = {{ c }}</li>
-
-    </ul>
 
 
-    {% if dscrt != None %}
-        <h3>Дискриминант: {{ dscrt }}</h3>
-        {% if dscrt > 0 %}
-            <h3>Квадратное уравнение имеет два действительных корня: x1 = {{ x1 }}, x2 = {{ x2 }}</h3>
-        {% elif dscrt == 0 %}
-            <h3>Дискриминант равен нулю, квадратное уравнение имеет один действительный корень: x1 = x2 = {{ x1 }}</h3>
-        {% elif dscrt < 0 %}
-            <h3>Дискриминант меньше нуля, квадратное уравнение не имеет действительных решений.</h3>
-        {% endif %}
+    {% if discr or discr == 0%}
+        <h3>Дискриминант: {{ discr }}</h3>
     {% endif %}
+    {% if result %}
+        <p>{{ result }}</p>
+    {% endif %}
+
 
 </body>
 </html>
