--- a/quadratic/templates/quadratic/results.html
+++ b/quadratic/templates/quadratic/results.html
@@ -1,9 +1,13 @@
-<h1> Quadratic </h1>
+<h1> Quadratic equation</h1>
 <div> Calculating ax<sup>2</sup> + bx + c = 0</div>
 <br>
 a = {{ a }} <br>
-{{ a_error }} <br>
+{{ err_a}} <br>
 b = {{ b }} <br>
-{{ b_error }} <br>
+{{ err_b }} <br>
 c = {{ c }} <br>
-{{ c_error }} <br>
+{{ err_c }} <br>
+<br>
+<b>{{ d }}</b>
+<br>
+{{ mes }}
