--- a/quadratic/templates/quadratic/results.html
+++ b/quadratic/templates/quadratic/results.html
@@ -1,13 +1,56 @@
-<p>Квадратное уравнение a*x*x + b*x + c = 0</p>
-<ul>
-<li>a = {{ a }}</li>
-<i>{{ err_a}}</i>
-<li>b = {{ b }}</li>
-<i>{{ err_b }}</i>
-<li>c = {{ c }}</li>
-<i>{{ err_c }}</i>
-</ul>
-{{ d }}
-<br>
-<br>
-{{ msg }}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>{{ title }}</title>
+</head>
+<body>
+
+
+<h1>Квадратное уравнение a*x*x + b*x + c = 0</h1>
+
+        <ul>
+            <li>
+                a = {{ a }}
+                {% if error_a %}
+                    <ul>
+                        <li>
+                            {{ error_a }}
+                        </li>
+                    </ul>
+                {% endif %}
+            </li>
+            <li>
+                b = {{ b }}
+                 {% if error_b %}
+                    <ul>
+                        <li>
+                            {{ error_b }}
+                        </li>
+                    </ul>
+                {% endif %}
+            </li>
+            <li>
+                c = {{ c }}
+                 {% if error_c %}
+                    <ul>
+                        <li>
+                            {{ error_c }}
+                        </li>
+                    </ul>
+                {% endif %}
+            </li>
+        </ul>
+
+
+
+    {% if discr or discr == 0%}
+        <h3>Дискриминант: {{ discr }}</h3>
+    {% endif %}
+    {% if result %}
+        <p>{{ result }}</p>
+    {% endif %}
+
+
+</body>
+</html>
