--- a/quadratic/templates/quadratic/results.html
+++ b/quadratic/templates/quadratic/results.html
@@ -1,3 +1,10 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Quadratic</title>
+</head>
+<body>
 <p>Квадратное уравнение a*x*x + b*x + c = 0</p>
 <ul>
 <li>a = {{ a }}
@@ -11,3 +18,5 @@
 <br>
 <br>
 {{ msg }}
+</body>
+</html>
